game doesn't crash anymore